# AquaLedger

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TASKS.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/common/: schemas.py
backend/app/core/: config.py  errors.py  exception_handlers.py  logging.py
backend/app/db/: base.py  session.py
backend/app/middleware/: auth_context.py  logging.py  request_id.py
backend/app/modules/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 005c4ade9277_supplier_payment_permissions.py  0066331bf93b_boats_table.py  244f758929a6_trip_delete_permission.py  37e193df7033_payments_and_payment_allocations_tables.py  3bfa1e6eab63_trip_catches_table.py  4c8d1766df97_suppliers_table.py  4ead5a8b4527_unique_company_name_index.py  53818f638a33_purchase_sequences_table.py  578d0e205274_purchase_management_permissions.py  59911f320635_supplier_payments_and_supplier_payment_.py  61c9d619c8d3_purchase_bill_item_line_number_counter.py  67c33121fc54_auth_and_tenancy_tables.py  72d5f6096c81_boat_management_permissions.py  72e2043a7f04_trips_table.py  9d4c1f6a82e7_payment_permissions.py  a100e0ef1d49_fish_table.py  a1c9f7e3d5b2_invoice_permissions.py  b3f6a1d94c27_invoices_and_invoice_items_tables.py  b6a1d7e3f284_payment_sequences_table.py  c40dad7f0957_companies_table.py  c7e4b2f81a9d_rename_invoice_notes_to_remarks.py  ccb7e18e8c13_baseline.py  d5381c02e1f3_purchase_bills_and_purchase_bill_items_.py  d96d76e5af7a_trip_catch_permissions.py  (+7 more)
backend/tests/: conftest.py  test_health.py
(+209 files in other folders)
